--- a/my-poke-app/src/css/frontpage.css
+++ b/my-poke-app/src/css/frontpage.css
@@ -5,29 +5,33 @@ body {
 
 .container {
   max-width: 960px;
-  /* change as needed */
-  margin: 5% auto;
-  display: flex;
-  flex-wrap: wrap;
-
+  margin: 1% auto;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr); /* define the size of the grid columns */
+  gap: 1rem; /* add some space between grid items */
+  padding: 0px;
 }
 
-.row {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
+
+/* Set 3 columns on screens that are at least 400px wide */
+@media (max-width: 800px) {
+  .container {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+/* Set 2 columns on screens that are less than 400px wide */
+@media (max-width: 600px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.pokemoncard {
+  height: auto; /* adjust as needed */
+  display: grid;
   width: 100%;
-  height: 20%;
-  margin-bottom: 20px;
-}
-
-.col-2 {
-  flex: 1 1 calc(20% - 10px); /* adjust as needed */
-  height: 100%; /* adjust as needed */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  object-fit: contain;
+  margin: 0px;
 
 }
 
@@ -49,7 +53,7 @@ button {
   border: none;
   background-color: #747474;
   color: white;
-  font-size: 16px;
+  font-size: 1rem;
   cursor: pointer;
   margin: 20px;
 }
